@@ -1,3 +1,8 @@
+2008-11-08  Paul Thomas  <pault@gcc.gnu.org>
+
+        PR fortran/37597
+        * gfortran.dg/host_assoc_call_5.f90: New test.
+
 2008-11-08  Mikael Morin  <mikael.morin@tele2.fr>
 
 	PR fortran/35820
