@@ -1,3 +1,9 @@
+2008-11-08  Paul Thomas  <pault@gcc.gnu.org>
+
+        PR fortran/37597
+        * parse.c (gfc_fixup_sibling_symbols ): Fixup contained, even
+	when symbol not found.
+
 2008-11-08  Mikael Morin  <mikael.morin@tele2.fr>
 
 	PR fortran/35820
